// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches CardTitle h1 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h1
  className="c0"
/>
`;

exports[`Styles matches CardTitle h1 2`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h1
  className="c0"
/>
`;

exports[`Styles matches CardTitle h2 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h2
  className="c0"
/>
`;

exports[`Styles matches CardTitle h3 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h3
  className="c0"
/>
`;

exports[`Styles matches CardTitle h4 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h4
  className="c0"
/>
`;

exports[`Styles matches CardTitle h5 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h5
  className="c0"
/>
`;

exports[`Styles matches CardTitle h6 1`] = `
.c0 {
  margin-bottom: 0.75rem;
}

<h6
  className="c0"
/>
`;

exports[`Styles matches CardTitle muted 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  color: #abaeb1;
}

<h6
  className="c0"
  muted={true}
/>
`;

exports[`Styles matches CardTitle subtitle 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  margin-top: -0.375rem;
  margin-bottom: 0;
}

<h4
  className="c0"
/>
`;
